# tgbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASK_001.md  TASK_002.md  TASK_003.md  TASK_004.md  deploy.sh  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: admin.py  health.py  public.py
app/bot/: handlers.py  keyboards.py  main.py  menus.py
app/core/: config.py
app/db/: init_db.py  models.py  session.py
app/schemas/: common.py  public.py  summary.py
app/services/: customers.py
app/services/billing/: usdt.py
app/services/deploy/: ssh.py
app/services/dns/: cloudflare.py
app/worker/: jobs.py  main.py
deploy/: README.md  install_docker_ubuntu.sh
scripts/: expiration_reminder.py
tests/: test_customers.py
