[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-command-center"
version = "0.1.0"
description = "Telegram-managed command center for multi-tenant deployment and billing workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13.1,<4.0.0",
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "apscheduler>=3.10.4,<4.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.2,<1.0.0",
  "paramiko>=3.5.0,<4.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "python-multipart>=0.0.12,<1.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.7.2,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"

